<resources>
    <string name="app_name">MOIRA</string>
    <string name="naver_client_id">Wb1bLmcaPiT1E6VW_xI3</string>
    <string name="naver_client_secret">cW1A3BXG9Z</string>
    <string name="naver_client_name">MOIRA</string>
    <string name="app_description">최고의 팀이 만들어지는 곳, 모이라!</string>
    <string name="apply_complete">지원을 완료했어요!</string>
    <string name="to_home">홈으로</string>
    <string name="home">홈</string>
    <string name="move_apply_list">지원목록 보러가기</string>
    <string name="find_contest">공모전 찾기</string>
    <string name="register">등록하기</string>
    <string name="naver_login">NAVER 계정으로 로그인하기</string>
    <string name="kakao_login">카카오 로그인</string>
    <string name="contest_list">공모전목록</string>
    <string name="my_team_name">나의 팀 이름</string>
    <string name="team_member">팀원</string>
    <string name="evaluate_member">팀원 평가하기</string>
    <string name="applicant_list">지원자 목록</string>
    <string name="apply_list">지원 목록</string>
    <string name="apply_history">지원 내역</string>
    <string name="recruitment_completed">모집완료</string>
    <string name="post_list">작성한 글</string>
    <string name="review">리뷰</string>
    <string name="write_comment">댓글쓰기</string>
    <string name="apply_cancel">지원 취소</string>
    <string name="edit_post">글 수정하기</string>
    <string name="make_team">팀 만들기</string>
    <string name="recruit_list">모집글 전체보기</string>
    <string name="related_tag">관련 태그</string>
    <string name="team_recruit">팀원 모집</string>
    <string name="entire">전체보기</string>
    <string name="recruit_info">모집 정보</string>
    <string name="project_type">프로젝트 종류</string>
    <string name="recruit_position">모집중인 포지션</string>
    <string name="kakao_app_key">80833a0235285489b82981db2a4c698e</string>
    <string name="add">add</string>
    <string name="position_num">%d명</string>
    <string name="to_str">%d</string>
    <string name="double_to_str">%.1f</string>
    <string name="badge_count">%d개</string>
    <string name="project_duration">프로젝트 기간</string>
    <string name="ask_apply_cancel">지원을 취소할까요?</string>
    <string name="region">지역</string>
    <string name="enter_project_name">프로젝트 제목을 입력해주세요.</string>
    <string name="enter_project_content">프로젝트 소개를 입력해주세요.</string>
    <string name="contest">공모전</string>
    <string name="side_project">사이드 프로젝트</string>
    <string name="my_team">나의 팀</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mypage">마이페이지</string>
    <string name="find_team_member">팀원찾기</string>
    <string name="add_education">학력 추가하기</string>
    <string name="school_name">학교명</string>
    <string name="enter_school_name">학교명을 입력해주세요.</string>
    <string name="major">전공</string>
    <string name="enter_major">전공을 입력해주세요.</string>
    <string name="admission">입학</string>
    <string name="status">상태</string>
    <string name="admission_year_month">입학 연월</string>
    <string name="graduation_year_month">졸업 연월</string>
    <string name="graduation">졸업</string>
    <string name="add_school">학교 추가하기</string>
    <string name="complete">완료하기</string>
    <string name="education">학력</string>
    <string name="career">경력</string>
    <string name="award_history">수상내역</string>
    <string name="rating">평점</string>
    <string name="look_around"><u>둘러볼게요</u></string>
    <string name="hello_enter_nickname">반갑습니다!\n닉네임을 입력해주세요.</string>
    <string name="enter_nickname">닉네임을 입력해주세요.</string>
    <string name="to_next">다음으로</string>
    <string name="select_position">해당하는 포지션을\n선택해주세요.</string>
    <string name="select_tag">내가 관심있는 태그를\n선택해주세요.</string>
    <string name="detail_position">상세 포지션</string>
    <string name="start">시작하기</string>
    <string name="search">검색</string>
    <string name="do_search">검색하기</string>
    <string name="image">이미지</string>
    <string name="link">링크</string>
    <string name="favorite_tag">관심태그</string>
    <string name="plus_add">+ 추가하기</string>
    <string name="badge">칭찬 배지</string>
    <string name="add_major">전공 추가하기</string>
    <string name="add_career">경력 추가하기</string>
    <string name="company_name">기업명</string>
    <string name="enter_company_name">기업명을 입력해주세요.</string>
    <string name="job_department">직무 / 부서명</string>
    <string name="enter_job_department">직무 및 부서명을 입력해주세요.</string>
    <string name="join_company">입사</string>
    <string name="join_company_year_month">입사일 (yyyy-mm-dd)</string>
    <string name="resignation_year_month">퇴사일 (yyyy-mm-dd)</string>
    <string name="add_company">기업 추가하기</string>
    <string name="add_job_department">직무 / 부서명 추가하기</string>
    <string name="add_link">링크 추가하기</string>
    <string name="link_url">링크/URL</string>
    <string name="add_tag">관심태그 추가하기</string>
    <string name="add_award_history">수상내역 추가하기</string>
    <string name="contest_name">대회명</string>
    <string name="add_certificate">자격증 추가하기</string>
    <string name="certificate_name">자격증명</string>
    <string name="acquisition_date">취득일</string>
    <string name="message_box">쪽지함</string>
    <string name="notification">알림</string>
    <string name="post">작성한 글</string>
    <string name="apply_post">지원한 글</string>
    <string name="scrap">스크랩</string>
    <string name="edit_my_info">내 정보 수정하기</string>
    <string name="my_activity">내 활동</string>
    <string name="received_evaluation">내가 받은 평가</string>
    <string name="customer_service">고객센터</string>
    <string name="question">문의하기</string>
    <string name="scrap_list">스크랩 목록</string>
    <string name="user_nickname">사용자 닉네임</string>
    <string name="position_name">포지션명</string>
    <string name="comment">댓글</string>
    <string name="registration">등록</string>
    <string name="evaluate_team_member">팀원 평가하기</string>
    <string name="apply">지원하기</string>
    <string name="show_total">전체보기</string>
    <string name="nickname">닉네임</string>
    <string name="position">포지션</string>
    <string name="one_line_intro">한줄소개</string>
    <string name="edit_profile">프로필 수정</string>
    <string name="send_message">쪽지보내기</string>
    <string name="go_with">함께하기</string>
    <string name="upload_picture">사진 업로드</string>
    <string name="cancle">취소</string>
    <string name="close">닫기</string>
    <string name="take_picture">사진 촬영</string>
    <string name="select_gallery">갤러리 선택</string>
    <string name="select_picture">사진 선택하기</string>
    <string name="select_complete">선택완료</string>
    <string name="complete_project">프로젝트 완료하기</string>
    <string name="complete_project_message">프로젝트가 모두 완료되었다면 완료하기 버튼을 눌러주세요.</string>
    <string name="project_completed">프로젝트가 완료되었습니다.</string>
    <string name="report_reason">신고 사유</string>
    <string name="report">신고하기</string>
    <string name="report_completed">신고가 완료되었습니다:</string>
    <string name="apply_completed">지원이 완료되었습니다</string>
    <string name="server_developer">서버 개발자</string>
    <string name="develop">개발</string>
    <string name="developer">개발자</string>
    <string name="plan">기획</string>
    <string name="planner">기획자</string>
    <string name="design">디자인</string>
    <string name="designer">디자이너</string>
    <string name="enter_ask_content">문의하실 내용을 입력해주세요.</string>
    <string name="enter_title">제목을 입력해주세요.</string>
    <string name="ask">문의하기</string>
    <string name="account_setting">계정 설정</string>
    <string name="logout">로그아웃</string>
    <string name="exit_account">계정 탈퇴</string>
    <string name="register_userpool">인재풀 등록하기</string>
    <string name="save">저장하기</string>
    <string name="display_my_profile">내 프로필 공개</string>
    <string name="do_add">추가하기</string>
    <string name="project_start">프로젝트 시작하기</string>
    <string name="project_start_description">본격적으로 제품과 서비스를 개발하기 앞서, 어떤 아이템을 어떻게\n
                                발전시킬지를 정해야하는데요! 여러가지 방법론이 있지만, 오늘\n
                                소개해드릴 이론은 가장 많이 쓰이는 ‘더블 다이아몬드’ 입니다.\n
                                제품 및 서비스를 기획하는 과정에서는 많은 의사결정을 하게\n
                                되는데, 이때 사용자에 대한 이해는 가장 중요한 정보로\n
                                작용합니다. 이를 위하여 영국 디자인 카운실은 성공적인 제품 개발\n
                                과정을 설명하기 위하여 더블 다이아몬드 모델을 고안함으로써\n
                                제품의 가치와 효과성을 입증하였답니다.\n\n
                                더블 다이아몬드는 각 다이아몬드 안에 두 가지 방법을 포함하고\n
                                있는데요, 함께 알아볼까요?</string>

    <string name="first_diamond_description">(1) 문제점 알아보기\n\n
        먼저 첫번째 다이아몬드는 새로운 제품 또는 기능이 해결해야 할\n
        문제를 찾는 방법을 설명하고자 합니다. 첫번째 단계로 기존 제품이\n
        갖는 문제점을 탐구합니다. 이를 위하여 에스노그래픽, 제품 사용자\n
        관찰, 일기 연구와 같은 정성적 리서치가 주로 활용되는데, 이는\n
        문제 해결 방법을 이해하고, 니즈와 거리가 먼 아이디어를 제거하는\n
        데에도 도움이 될 수 있습니다.\n\n
        (2) 문제 정의하기\n\n
        둘째, 탐구한 문제를 이해했다면, 이를 문서화하고, 우선순위를\n
        정함으로써 무엇을 해결할지 결정해야 합니다. 설문조사와 같은\n
        정량적 방식을 통하여 문제의 중요도를 밝혀냄으로써 제품이 어떤\n
        문제를 해결하려 하는지 명확히 이해할 수 있습니다.\n</string>


    <string name="second_diamond_description">(1) 방법 탐구하기\n\n\
        이후 두번째 다이아몬드에서는 문제를 해결하기 위하여 제품을\n
        성공적으로 구현하는 방법을 설명하고자 합니다.\n
        두번째 다이아몬드의 첫번째 단계로, 제품을 구현할 최선의 방법을\n
        결정하기 위하여 다양한 해결 방법을 평가합니다. 이를 위하여\n
        사용자 각각의 경험을 고려해야 하며, 품 분석을 통해 사용자의\n
        행동을 이해할 수 있도록 해야 합니다. 이를 위하여 분석 및 사용자\n
        리서치 팀 간 긴밀한 협업을 통해 의사결정의 질을 높일 수 있습니다.\n\n
        (2) 실행하기\n\n
        마지막 단계에서는 정의 내린 문제에 대한 해결방안이\n
        실행되는 단계입니다. 소비자들의 피드백을 받을 수 있는\n
        단계이기 때문에 매우 중요한 단계이기도 하답니다.\n\n
        그렇다면 지금까지 함께 알아본 방법들을 통해 팀원들과 기획을\n
        시작해볼까요?\n</string>


    <string name="moira_description">최고의 팀이 만들어지는 곳, 모이라!\n\n
        ‘모이라’는 기획자와 개발자, 디자이너 등 팀 빌딩에 어려움을 겪는
        여러 포지션의 사용자들이 쉽게 팀을 구성할 수 있도록 도와주는
        서비스입니다. 지금부터 모이라의 기능을 살펴볼까요?</string>


    <string name="moira_description2">내가 진행하고 싶은 프로젝트를 등록하고, 함께할 팀원들을 구할 수
있어요. 목표를 공유하고, 함께 발전해나갈 수 있는 개발자, 기획자
그리고 디자이너를 모집해 보세요!</string>


    <string name="moira_description3">마음에 드는 프로젝트 팀을 모집하는 글에 지원할 수 있습니다.
지원서 작성은 손 쉽게 나의 프로필 중, 원하는 정보만을 넣을 수
있어요! 팀장은 모두의 지원서를 검토 후, 초대 메시지를 통해
팀 합류를 요청해요! 초대를 승낙하고, 팀에 합류해 프로젝트를
완성해보세요!</string>


    <string name="moira_description4">프로젝트를 완료하면, 함께했던 팀원에게 리뷰를 남길 수 있어요!
유저 리뷰는 모집글 지원/인재풀 등록 시 모두에게 공개되며 추후
수정할 수 없어요! 리뷰를 통해서 고맙고, 훌륭했던 팀원에게 칭찬
배지를 줄 수 있습니다!</string>


    <string name="moira_description5">이제부터 나에게 맞는 팀원을 찾으러 떠나볼까요?</string>
    <string name="apply_info">지원 정보</string>
    <string name="modify">변경하기</string>

</resources>