<?xml version="1.0" encoding="utf-8"?>
<layout>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.mypage.edit.addinfo.career.AddCareerActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            app:contentInsetLeft="0dp"
            app:contentInsetStart="0dp"
            app:contentInsetStartWithNavigation="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:theme="@style/toolbar_theme_close">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_career"
                    android:textAppearance="@style/toolbar_title"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>


                <android.widget.Button
                    android:id="@+id/register_button"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:text="@string/register"
                    android:background="@android:color/transparent"
                    android:lineSpacingExtra="8sp"
                    android:textAppearance="@style/register_button"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.appcompat.widget.Toolbar>

        <TextView
            android:id="@+id/company_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/company_name"
            android:textAppearance="@style/project_info"
            android:layout_marginTop="32dp"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />

        <EditText
            android:id="@+id/company_name_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/enter_company_name"
            android:layout_marginTop="12dp"
            android:layout_marginHorizontal="16dp"
            android:paddingBottom="17dp"
            android:textColor="@color/black"
            android:textSize="13sp"
            android:lineSpacingExtra="6sp"
            android:theme="@style/EditTextTheme2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/company_name" />

        <TextView
            android:id="@+id/job_department"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/job_department"
            android:textAppearance="@style/project_info"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/company_name_et" />

        <EditText
            android:id="@+id/job_department_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/enter_job_department"
            android:layout_marginTop="12dp"
            android:layout_marginHorizontal="16dp"
            android:paddingBottom="17dp"
            android:textColor="@color/black"
            android:textSize="13sp"
            android:lineSpacingExtra="6sp"
            android:theme="@style/EditTextTheme2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/job_department" />


        <TextView
            android:id="@+id/join_company"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/join_company"
            android:textAppearance="@style/project_info"
            android:layout_marginTop="20dp"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/job_department_et" />

        <EditText
            android:id="@+id/join_company_et"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/join_company_year_month"
            android:layout_marginTop="14dp"
            android:layout_marginHorizontal="16dp"
            android:paddingBottom="17dp"
            android:textColor="@color/black"
            android:textSize="13sp"
            android:lineSpacingExtra="6sp"
            android:theme="@style/EditTextTheme2"
            app:layout_constraintRight_toLeftOf="@+id/barrier"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/join_company" />


        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="start"
            app:constraint_referenced_ids="resignation_et"/>


        <TextView
            android:id="@+id/resignation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="퇴사"
            android:textAppearance="@style/project_info"
            android:layout_marginTop="20dp"
            app:layout_constraintLeft_toRightOf="@+id/barrier"
            app:layout_constraintTop_toBottomOf="@+id/job_department_et" />


        <EditText
            android:id="@+id/resignation_et"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/resignation_year_month"
            android:layout_marginTop="14dp"
            android:layout_marginHorizontal="16dp"
            android:paddingBottom="17dp"
            android:textColor="@color/black"
            android:textSize="13sp"
            android:lineSpacingExtra="6sp"
            android:theme="@style/EditTextTheme2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/barrier"
            app:layout_constraintTop_toBottomOf="@+id/resignation" />






    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>