<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.initial.position.SetPositionFragment">

    <TextView
        android:id="@+id/select_position_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_position"
        android:layout_marginTop="70dp"
        android:layout_marginStart="16dp"
        android:textAppearance="@style/hello_enter_nickname"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="53dp"
        android:stretchColumns="*"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/select_position_text">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ToggleButton
                android:id="@+id/develop_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textOn="@string/develop"
                android:textOff="@string/develop"
                android:gravity="center_horizontal|bottom"
                android:paddingBottom="20dp"
                android:textAppearance="@style/position_text"
                android:background="@drawable/develop_toggle_btn"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/enter_nickname_text"/>


            <ToggleButton
                android:id="@+id/plan_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textOn="@string/plan"
                android:textOff="@string/plan"
                android:gravity="center_horizontal|bottom"
                android:paddingBottom="20dp"
                android:textAppearance="@style/position_text"
                android:background="@drawable/plan_toggle_btn"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/enter_nickname_text"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="9dp">

            <ToggleButton
                android:id="@+id/design_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textOn="@string/design"
                android:textOff="@string/design"
                android:gravity="center_horizontal|bottom"
                android:paddingBottom="20dp"
                android:textAppearance="@style/position_text"
                android:background="@drawable/design_toggle_btn"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/enter_nickname_text"/>

        </TableRow>

    </TableLayout>


    <LinearLayout
        android:id="@+id/to_next_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:text="@string/to_next"
            android:textAppearance="@style/to_next_btn_black"/>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15.5dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_baseline_arrow_forward_ios_20" />

    </LinearLayout>






</androidx.constraintlayout.widget.ConstraintLayout>